task/k8s/config/todo-api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-api-gateway
  labels:
    todo-app-deployment: todo-api-gateway
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-api-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-api-gateway
    spec:
      restartPolicy: Always
      containers:
      - name: todo-api-gateway
        image: onceawaken/todo-api-gateway:1.0
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 128Mi
