task/k8s/config/todo-cache-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-cache-ingestion
  labels:
    todo-app-deployment: todo-cache-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-cache-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-cache-ingestion
    spec:
      restartPolicy: Always
      containers:
      - image: onceawaken/todo-cache-ingestion:1.0
        name: todo-cache-ingestion
        resources:
          limits:
            memory: 128Mi
