task/k8s/config/todo-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-proxy
  labels:
    todo-app-deployment: todo-proxy
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-proxy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-proxy
    spec:
      restartPolicy: Always
      containers:
      - name: todo-proxy
        image: onceawaken/todo-proxy:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
