task/k8s/config/todo-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-rabbitmq
  labels:
    todo-app-deployment: todo-rabbitmq
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-rabbitmq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        todo-app-pod: todo-rabbitmq
    spec:
      restartPolicy: Always
      containers:
        - name: todo-rabbitmq
          image: rabbitmq:3.7.13-management
          ports:
          - name: http
            protocol: TCP
            containerPort: 15672
          - name: amqp
            protocol: TCP
            containerPort: 5672
          resources:
            limits:
              memory: 500Mi
          livenessProbe:
            exec:
              command: ["rabbitmqctl", "status"]
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command: ["rabbitmqctl", "status"]
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 10
