task/k8s/config/todo-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo
  name: todo-proxy
  labels:
    todo-app-service: todo-proxy
spec:
  type: LoadBalancer
  selector:
    todo-app-pod: todo-proxy
  ports:
  - name: proxy-port
    port: 8080
    targetPort: 80
