task/k8s/config/todo-storage-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo
  name: todo-storage-service
  labels:
    todo-app-service: todo-storage-service
spec:
  type: ClusterIP
  selector:
    todo-app-pod: todo-storage-service
  ports:
    - name: http
      port: 3000
      targetPort: 3000
